# veo-3.1-sdk

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
go/: README.md  go.mod  go.sum
go/veo31/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  build.gradle.kts  settings.gradle.kts
java/runapi-core/: build.gradle.kts
java/runapi-core/src/main/java/ai/runapi/core/: ApiRequestExecutor.java  BaseClient.java  ClientOptions.java  Constants.java  RequestOptions.java
java/runapi-core/src/test/java/ai/runapi/core/: ApiRequestExecutorTest.java  ClientOptionsTest.java  LocalRunApiSmokeTest.java  (+1 more)
java/runapi-veo-3.1/: build.gradle.kts
js/: README.md  package.json  tsconfig.base.json  tsconfig.json  tsup.config.mts
js/manual-tests/: .env.example  README.md  test-all.ts  test-error-handling.ts  test-extend-video.ts  test-image-to-video.ts  test-model-comparison.ts  test-reference-to-video.ts  test-text-to-video.ts  test-upscale-video.ts
js/skills/veo-3.1/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: extend-video.ts  text-to-video.ts  upscale-video.ts
js/tests/unit/: client.test.ts  extend-video.test.ts  text-to-video.test.ts  upscale-video.test.ts
python/: README.md  pyproject.toml
python/src/runapi/veo_3_1/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/veo_3_1/resources/: __init__.py  extend_video.py  text_to_video.py  upscale_video.py
python/tests/: test_client.py
ruby/: Gemfile  README.md  runapi-veo-3.1.gemspec  runapi-veo_3_1.gemspec
ruby/examples/: veo_3_1_video.rb
ruby/lib/: runapi-veo_3_1.rb
ruby/lib/runapi/: veo_3_1.rb
ruby/lib/runapi/veo_3_1/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/veo_3_1/resources/: extend_video.rb  text_to_video.rb  upscale_video.rb
ruby/spec/: spec_helper.rb
ruby/spec/runapi/veo_3_1/: client_spec.rb
ruby/spec/runapi/veo_3_1/resources/: extend_video_spec.rb  text_to_video_spec.rb  upscale_video_spec.rb
(+73 files in other folders)
