[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-veo-3-1"
version = "0.1.0"
description = "Veo 3.1 video client for RunAPI"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "veo", "veo-3.1", "text-to-video", "ai", "sdk"]
dependencies = ["runapi-core"]

[project.urls]
Homepage = "https://runapi.ai/models/veo-3-1"
Documentation = "https://runapi.ai/docs#sdk-veo-3-1"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[tool.uv.sources]
runapi-core = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "veo-3.1"
